deploy/gslb/namespace_gatewayapi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-gslb-gatewayapi
  labels:
    istio-injection: enabled
