deploy/gslb/gatewayapi_gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gatewayapi
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 8000
    allowedRoutes:
      namespaces:
        from: All
  - name: tcp
    protocol: TCP
    port: 8000
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: TCPRoute
  - name: udp
    protocol: UDP
    port: 8000
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: UDPRoute
  - name: tls
    protocol: TLS
    port: 8000
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: TLSRoute
