deploy/gslb/k8gb.absa.oss_v1beta1_gslb_cr_failover_gatewayapi_tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: failover-tcproute
  namespace: test-gslb-gatewayapi
spec:
  parentRefs:
  - name: gatewayapi
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: frontend-podinfo
      port: 9898
