deploy/gslb/k8gb.absa.oss_v1beta1_gslb_cr_failover_gatewayapi_tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: failover-tlsroute
  namespace: test-gslb-gatewayapi
spec:
  parentRefs:
  - name: gatewayapi
    namespace: istio-ingress
  hostnames:
    - failover-tlsroute.cloud.example.com
  rules:
  - backendRefs:
    - name: frontend-podinfo
      port: 9999
