deploy/gslb/k8gb.absa.oss_v1beta1_gslb_cr_failover_ingress_ref.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: failover-ingress
  namespace: test-gslb
spec:
  ingressClassName: nginx
  rules:
  - host: failover.cloud.example.com
    http:
      paths:
      - backend:
          service:
            name: frontend-podinfo
            port:
              name: http
        path: /
        pathType: Prefix
