deploy/gslb/k8gb.absa.oss_v1beta1_gslb_cr_failover_istio.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: failover-istio
  namespace: test-gslb-istio
spec:
  gateways:
    - istio-ingress/failover-istio
  hosts:
    - failover-istio.cloud.example.com
  http:
    - route:
        - destination:
            host: frontend-podinfo
            port:
              number: 9898
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: failover-istio
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - failover-istio.cloud.example.com
      port:
        number: 8080
        name: http
        protocol: http
