deploy/gslb/k8gb.absa.oss_v1beta1_gslb_cr_notfound_gatewayapi_httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: notfound-httproute
  namespace: test-gslb-gatewayapi
spec:
  parentRefs:
  - name: gatewayapi
    namespace: istio-ingress
  hostnames:
    - notfound-httproute.cloud.example.com
  rules:
  - backendRefs:
    - name: non-existing-app
      port: 9898
