deploy/gslb/k8gb.absa.oss_v1beta1_gslb_cr_notfound_istio.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: notfound-istio
  namespace: test-gslb-istio
  labels:
    app: notfound-istio
spec:
  gateways:
    - istio-ingress/notfound-istio
  hosts:
    - notfound-istio.cloud.example.com
  http:
    - route:
        - destination:
            host: non-existing-app
            port:
              number: 9898
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: notfound-istio
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - notfound-istio.cloud.example.com
      port:
        number: 8080
        name: http
        protocol: http
