deploy/gslb/k8gb.absa.oss_v1beta1_gslb_cr_roundrobin_gatewayapi_httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: roundrobin-httproute
  namespace: test-gslb-gatewayapi
spec:
  parentRefs:
  - name: gatewayapi
    namespace: istio-ingress
  hostnames:
    - roundrobin-httproute.cloud.example.com
  rules:
  - backendRefs:
    - name: frontend-podinfo
      port: 9898
