deploy/gslb/k8gb.absa.oss_v1beta1_gslb_cr_roundrobin_ingress_ref.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roundrobin-ingress
  namespace: test-gslb
spec:
  ingressClassName: nginx
  rules:
  - host: notfound.cloud.example.com
    http:
      paths:
      - backend:
          service:
            name: non-existing-app
            port:
              name: http
        path: /
        pathType: Prefix
  - host: unhealthy.cloud.example.com
    http:
      paths:
      - backend:
          service:
            name: unhealthy-app
            port:
              name: http
        path: /
        pathType: Prefix
  - host: roundrobin.cloud.example.com
    http:
      paths:
      - backend:
          service:
            name: frontend-podinfo
            port:
              name: http
        path: /
        pathType: Prefix
