deploy/gslb/k8gb.absa.oss_v1beta1_gslb_cr_unhealthy_gatewayapi_httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unhealthy-httproute
  namespace: test-gslb-gatewayapi
spec:
  parentRefs:
  - name: gatewayapi
    namespace: istio-ingress
  hostnames:
    - unhealthy-httproute.cloud.example.com
  rules:
  - backendRefs:
    - name: unhealthy-app
      port: 80
