deploy/gslb/k8gb.absa.oss_v1beta1_gslb_cr_unhealthy_istio.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: unhealthy-istio
  namespace: test-gslb-istio
  labels:
    app: unhealthy-istio
spec:
  gateways:
    - istio-ingress/unhealthy-istio
  hosts:
    - unhealthy-istio.cloud.example.com
  http:
    - route:
        - destination:
            host: unhealthy-app
            port:
              number: 80
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: unhealthy-istio
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - unhealthy-istio.cloud.example.com
      port:
        number: 8080
        name: http
        protocol: http
