deploy/gslb/k8gb.io_v1beta1_gslb_cr_gatewayapi_tlsroute_versions.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tlsroute-v1
  namespace: test-gslb-gatewayapi
spec:
  parentRefs:
  - name: gatewayapi
    namespace: istio-ingress
  hostnames:
  - tlsroute-v1.cloud.example.com
  rules:
  - backendRefs:
    - name: frontend-podinfo
      port: 9898
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute-v1alpha2
  namespace: test-gslb-gatewayapi
spec:
  parentRefs:
  - name: gatewayapi
    namespace: istio-ingress
  hostnames:
  - tlsroute-v1alpha2.cloud.example.com
  rules:
  - backendRefs:
    - name: frontend-podinfo
      port: 9898
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: tlsroute-v1alpha3
  namespace: test-gslb-gatewayapi
spec:
  parentRefs:
  - name: gatewayapi
    namespace: istio-ingress
  hostnames:
  - tlsroute-v1alpha3.cloud.example.com
  rules:
  - backendRefs:
    - name: frontend-podinfo
      port: 9898
