deploy/gslb/k8gb.io_v1beta1_gslb_cr_multiservice_ingress_ref.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiservice-gslb-all
  namespace: test-gslb
spec:
  ingressClassName: nginx
  rules:
  - host: multiservice-all.cloud.example.com
    http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: multiservice-blue
            port:
              name: http
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: multiservice-green
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiservice-gslb-any
  namespace: test-gslb
spec:
  ingressClassName: nginx
  rules:
  - host: multiservice-any.cloud.example.com
    http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: multiservice-blue
            port:
              name: http
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: multiservice-green
            port:
              name: http
